--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>MICHELLE-BUI</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Michelle Bui. All rights reserved.</p>
     </footer>
 </body>
 </html>
