change the picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="flex flex-col md:flex-row gap-8 items-center">
 
       <!-- Image -->
-      <img src="/images/randomsim.jpg" alt="Michelle"
+      <img src="/images/headshot.png" alt="Michelle"
         class="w-full md:w-1/2 rounded-lg shadow-md object-cover aspect-square">
 
       <!-- Text -->
