need to add more in the future.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <div class="flex-shrink-0">
           <a href="#" class="font-serif text-xl font-bold">Michelle Bui</a>
         </div>
-
         <!-- Desktop Nav -->
         <nav class="hidden md:flex space-x-8">
           <a href="#home" class="font-serif hover:text-pink-200 font-medium">Home</a>
@@ -35,7 +34,6 @@
           <a href="#projects" class="font-serif hover:text-pink-200 font-medium">Projects</a>
           <a href="#contact" class="font-serif hover:text-pink-200 font-medium">Contact</a>
         </nav>
-
       </div>
     </div>
   </header>
@@ -43,20 +41,18 @@
   <!-- Main Content -->
   <main class="max-w-7xl mx-auto px-4 py-10 font-serif">
     <div class="flex flex-col md:flex-row gap-8 items-center">
-
       <!-- Image -->
       <img src="/images/michelle_grad.jpeg" alt="Michelle"
         class="w-full md:w-1/2 rounded-lg shadow-md object-cover aspect-square">
-
       <!-- Text -->
       <section class="font-serif w-full md:w-1/2">
-        <h1 class="text-3xl font-bold mb-4">hey, i’m michelle 👋</h1>
+        <h1 class="text-3xl font-bold mb-4">Hey, I’m Michelle 👋</h1>
         <p class="text-lg leading-relaxed">
-          i’m a cs master’s student at cal state fullerton (bs from uci 💻)
-          figuring out where i fit in the tech world. right now, i’m exploring software + data engineering
-          and open to internships where i can learn cool stuff, build real things, and grow along the way.
-          take a look around — you’ll find some of my projects, experiences, and whatever else i’m currently
-          geeking out about. <br><br>let's chat more! please reach out to me via email for my number.
+          I’m a CS master’s student at Cal State Fullerton (BS from UC Irvine 💻)
+          figuring out where I fit in the tech world. Right now, I’m exploring software + data engineering
+          and open to internships where I can learn cool stuff, build real things, and grow along the way.
+          take a look around — you’ll find some of my projects, experiences, and whatever else I’m currently
+          geeking out about. <br><br>Let's chat more! Please reach out to me via email for my number.
 
         <div class="flex space-x-6 mb-4">
           <!-- GitHub -->
@@ -86,11 +82,10 @@
   <!--about me-->
   <section id="aboutme" class="max-w-7xl mx-auto px-4 py-10">
     <section class="w-full md:w-1/2 font-serif">
-
-      <h1 class="text-3xl font-bold mb-8">about me</h1>
+      <h1 class="text-3xl font-bold mb-8">About Me</h1>
 
       <div class="mb-8">
-        <h2 class="text-2xl font-bold mb-4">education</h2>
+        <h2 class="text-2xl font-bold mb-4">Education</h2>
         <div class="space-y-3">
           <p>
             <strong>California State University, Fullerton - M.S. Computer Science</strong><br>
@@ -104,7 +99,7 @@
       </div>
 
       <div class="mb-8">
-        <h2 class="text-2xl font-bold mb-4">fellowships</h2>
+        <h2 class="text-2xl font-bold mb-4">Fellowships</h2>
         <div class="space-y-3">
           <p>
             <strong>COOP Career - Data Analytics Fellow</strong><br>
@@ -118,7 +113,7 @@
       </div>
 
       <div class="mb-8">
-        <h2 class="text-2xl font-bold mb-4">organizations<p class=" text-base font-medium">*see experience+skil section
+        <h2 class="text-2xl font-bold mb-4">Organizations<p class=" text-base font-medium">*See experience+skil section
             to learn more about my achievements in each role!</p>
         </h2>
         <div class="space-y-3">
@@ -135,7 +130,7 @@
       </div>
 
       <div class="mb-8">
-        <h2 class="text-2xl font-bold mb-4">certifications</h2>
+        <h2 class="text-2xl font-bold mb-4">Certifications</h2>
         <p><strong>Google Analytics Professional Certificate (Coursera)
           </strong><br>
           <em>Recieved November 2024</em>
@@ -145,7 +140,7 @@
       </div>
 
       <div class="mb-8">
-        <h2 class="text-2xl font-bold mb-4">hobbies/interests</h2>
+        <h2 class="text-2xl font-bold mb-4">Hobbies/Interests</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
           <div>
             <p class="font-semibold text-lg mb-4">Hobbies</p>
@@ -241,11 +236,11 @@
   <!--experience + skills-->
   <section id="experiences" class="max-w-7xl mx-auto px-4 py-10">
     <section class="w-full font-serif">
-      <h1 class="text-3xl font-bold mb-8">experiences</h1>
+      <h1 class="text-3xl font-bold mb-8">Experiences</h1>
       <div class="space-y-8">
         <!-- Job 1 -->
         <div>
-          <strong>athletics it student assistant</strong><br>
+          <strong>Athletics IT Student Assistant</strong><br>
           <em>UC Irvine Office of Information and Technology</em><br>
           <em>Irvine, CA | Sept 2022 - May 2024</em>
           <ul class="list-disc list-inside mt-2">
@@ -263,7 +258,7 @@
         </div>
         <!-- Job 2 -->
         <div>
-          <strong>ics 32 learning assistant</strong><br>
+          <strong>ICS 32 Learning Assistant</strong><br>
           <em>UC Irvine Office of Information and Technology</em><br>
           <em>Irvine, CA | Jan 2024 - March 2024</em>
           <ul class="list-disc list-inside mt-2">
@@ -275,22 +270,8 @@
           <p class="mt-2 text-sm italic">Skills: Teaching, Communication, Collaboration, Curriculum Planning, Python,
             Debugging</p>
         </div>
-        <!-- Job 3 -->
         <div>
-          <strong>tech officer</strong><br>
-          <em>Step Up Tutoring</em><br>
-          <em>Remote, CA | March 2021 - July 2021</em>
-          <ul class="list-disc list-inside mt-2">
-            <li>Provided dedicated tech support to 20+ tutors, resolving 95% of issues with Zoom and other technologies
-            </li>
-            <li>Managed scheduling via Calendly and hosted weekly office hours for real-time troubleshooting</li>
-            <li>Empowered tutors with essential technology tools and guidance</li>
-          </ul>
-          <p class="mt-2 text-sm italic">Skills: Tech Support, Zoom, Calendly, Training, Troubleshooting</p>
-        </div>
-        <!-- Job 4 -->
-        <div>
-          <strong>vice-president of communications</strong><br>
+          <strong>Vice-President of Communications</strong><br>
           <em>UC Irvine Multicultural Sorority and Fraternity Council</em><br>
           <em>Irvine, CA | Jan 2024 - March 2024</em>
           <ul class="list-disc list-inside mt-2">
@@ -303,24 +284,8 @@
         </div>
         <!-- Job 5 -->
         <div>
-          <strong>secretary</strong><br>
+          <strong>Webmistress</strong><br>
           <em>Delta Lambda Chi</em><br>
-          <em>Irvine, CA | Jan 2024 - March 2024</em>
-          <ul class="list-disc list-inside mt-2">
-            <li>Managed internal records, official communications, and confidential documentation for a 15-member
-              chapter.</li>
-            <li>Maintained chapter email and responded to inquiries from potential members and external contacts.</li>
-            <li>Scheduled and participated in interviews for potential new members, helping assess alignment with
-              chapter values.</li>
-            <li>Supported the executive board with calendar reminders, event documentation, and coordination of chapter
-              logistics.</li>
-          </ul>
-          <p class="mt-2 text-sm italic">Skills: Leadership, Communication, Typing, Event Planning, Member Engagement
-          </p>
-        </div>
-        <div>
-          <strong>webmistress</strong><br>
-          <em>delta lambda chi</em><br>
           <em>Irvine, CA | Jan 2024 - March 2024</em>
           <ul class="list-disc list-inside mt-2">
             <li>Rebuilt and maintained the chapter’s official website using WIX, increasing website traffic by 3x and
@@ -335,7 +300,7 @@
           <p class="mt-2 text-sm italic">Skills: Wix, UI/UX, Communications</p>
         </div>
         <div>
-          <strong>academics chair</strong><br>
+          <strong>Academics Chair</strong><br>
           <em>UC Irvine Multicultural Sorority and Fraternity Council</em><br>
           <em>Irvine, CA | Jan 2024 - March 2024</em>
           <ul class="list-disc list-inside mt-2">
@@ -352,8 +317,24 @@
           <p class="mt-2 text-sm italic">Skills: Data Analysis, Communications</p>
         </div>
         <div>
-          <strong>new member educator</strong><br>
-          <em>UC Irvine Multicultural Sorority and Fraternity Council</em><br>
+          <strong>Secretary</strong><br>
+          <em>Delta Lambda Chi</em><br>
+          <em>Irvine, CA | Jan 2024 - March 2024</em>
+          <ul class="list-disc list-inside mt-2">
+            <li>Managed internal records, official communications, and confidential documentation for a 15-member
+              chapter.</li>
+            <li>Maintained chapter email and responded to inquiries from potential members and external contacts.</li>
+            <li>Scheduled and participated in interviews for potential new members, helping assess alignment with
+              chapter values.</li>
+            <li>Supported the executive board with calendar reminders, event documentation, and coordination of chapter
+              logistics.</li>
+          </ul>
+          <p class="mt-2 text-sm italic">Skills: Leadership, Communication, Typing, Event Planning, Member Engagement
+          </p>
+        </div>
+        <div>
+          <strong>New Member Educator</strong><br>
+          <em>Delta Lambda Chi</em><br>
           <em>Irvine, CA | Jan 2024 - March 2024</em>
           <ul class="list-disc list-inside mt-2">
             <li>Designed a 6-week onboarding curriculum for 4 new members, emphasizing leadership development, chapter
@@ -366,6 +347,18 @@
               feedback loops and conflict resolution strategies.</li>
           </ul>
           <p class="mt-2 text-sm italic">Skills: Leadership, Event Planning, Communication, Team-Collobration</p>
+        </div>
+         <div>
+          <strong>Tech Officer</strong><br>
+          <em>Step Up Tutoring</em><br>
+          <em>Remote, CA | March 2021 - July 2021</em>
+          <ul class="list-disc list-inside mt-2">
+            <li>Provided dedicated tech support to 20+ tutors, resolving 95% of issues with Zoom and other technologies
+            </li>
+            <li>Managed scheduling via Calendly and hosted weekly office hours for real-time troubleshooting</li>
+            <li>Empowered tutors with essential technology tools and guidance</li>
+          </ul>
+          <p class="mt-2 text-sm italic">Skills: Tech Support, Zoom, Calendly, Training, Troubleshooting</p>
         </div>
       </div>
     </section>
@@ -390,7 +383,7 @@
 <!-- Footer -->
 <footer id="contact" class="bg-pink-700 py-10 mt-16 text-white">
   <div class="max-w-7xl mx-auto px-4 text-center font-serif">
-    <h2 class="text-2xl font-bold mb-6">let talk more!</h2>
+    <h2 class="text-2xl font-bold mb-6">Let talk more!</h2>
 
     <div class="flex justify-center items-center space-x-6 mb-4">
       <!-- GitHub -->
