fixed coding project

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <h2 class="text-3xl font-bold mb-6 font-serif">Projects</h2>
     <div id="filters" class="mb-6 flex gap-4 flex-wrap">
       <button data-category="All" class="filter-btn px-4 py-2 bg-pink-200 rounded hover:bg-pink-300">All</button>
-      <button data-category="Project" class="filter-btn px-4 py-2 bg-pink-200 rounded hover:bg-pink-300">Coding</button>
+      <button data-category="Coding" class="filter-btn px-4 py-2 bg-pink-200 rounded hover:bg-pink-300">Coding</button>
       <button data-category="Data Analytics" class="filter-btn px-4 py-2 bg-pink-200 rounded hover:bg-pink-300">Data
         Analytics</button>
       <button data-category="Website"
