adding new skills

--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
           <p>Excel (VLOOKUP, PivotTables)</p>
           <p>Tableau</p>
           <p>Git/GitHub</p>
+          <p>BigQuery</p>
+          <p>mySQL Workbench</p>
+          <p>Jupyter Notebooks</p>
+          <p>VS Studio</p>
           <p>Microsoft Suite (Excel, Teams, PowerPoint, Word, SharePoint)</p>
           <p>Google Workspace (Sheets, Docs, Slides, Calendar)</p>
           <p>Basecamp</p>
